color functionality